Remove card creation, add heal method