@@ -1,13 +1,15 @@
 package deckfall.Entity;
 
 import deckfall.Card.*;
-
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.logging.Logger;
 
 public abstract class Entity {
+    private static final String DEFAULT_ENTITY_DESCRIPTION = "No description available.";
     protected String name;
+    protected String description;
     protected int healthPoints;
     protected int maxHealthPoints;
     protected int block;
@@ -16,16 +18,16 @@ public abstract class Entity {
     protected List<Card> hand = new ArrayList<>();
     protected List<Card> discardPile = new ArrayList<>();
 
-    protected static final List<Card> DEFAULT_CARD_DECK = List.of(
-            new SlashCard("Simple Slash", 1, "Deal 2 points of Slash damage to one enemy", 2),
-            new SlashCard("Simple Slash", 1, "Deal 2 points of Slash damage to one enemy", 2),
-            new SlashCard("Throw Down", 0, "Your final stand.", 1),
-            new RestoreHealthCard("Moon's blessing", 3, "Receive the blessing of the moon, and receive up to 5 points of health", 5),
-            new ShieldCard("Block", 1, "Block up to 3 points of incoming damage", 3)
-    );
+    public static Logger logger;
+
 
     public Entity(String name, int healthPoints) {
+        this(name, healthPoints, DEFAULT_ENTITY_DESCRIPTION);
+    }
+
+    public Entity(String name, int healthPoints, String description) {
         this.name = name;
+        this.description = description;
         this.healthPoints = healthPoints;
         this.maxHealthPoints = healthPoints;
     }
@@ -40,6 +42,10 @@ public abstract class Entity {
     // Combat Methods
     public void gainBlock(int blockAmount) {
         this.block += blockAmount;
+    }
+
+    public void heal(int healthHealed) {
+        this.healthPoints = Math.min(this.maxHealthPoints, this.healthPoints + Math.max(0, healthHealed));
     }
 
     public boolean isAlive() {
@@ -61,7 +67,7 @@ public abstract class Entity {
             Collections.shuffle(deck);
         }
         for (int i = 0; i < drawCount && !deck.isEmpty(); i++) {
-            hand.add(deck.removeFirst());
+            hand.add(deck.remove(0));
         }
     }
 
@@ -71,19 +77,39 @@ public abstract class Entity {
     }
 
     // Getter Methods
-    public String getName() { return name; }
-    public int getHP()      { return healthPoints; }
-    public int getMaxHP()   { return maxHealthPoints; }
-    public List<Card> getHand()   { return hand; }
-    public int getBlock()     { return block; }
+    public String getName()     { return name; }
+    public void setName(String name) { this.name = name; }
+    public String getDescription() { return description; }
+    public int getHP()          { return healthPoints; }
+    public int getMaxHP()       { return maxHealthPoints; }
+    public List<Card> getHand() { return hand; }
+    public int getBlock()       { return block; }
 
     public String evalMove(Card selectedCard, Entity target) {
-        //TODO: eval whether the card is in the entity's hand, whether they have enough energy/mana? to use it,
-        // and whether the selected target is valid for the type of card selected. If any are false, return a string explaining that
-        return "Cannot play cards rn. Try passing instead.";
+        // TODO: eval whether the card is in the entity's hand,
+        // whether they have enough energy/mana? to use it,
+        // and whether the selected target is valid for the type of card selected.
+
+        if (!hand.contains(selectedCard)) {
+            return "Card not in hand.";
+        }
+
+        if (target == null) {
+            return "No target selected.";
+        }
+        if (!target.isAlive()) {
+            return "Target is already dead.";
+        }
+
+        return "";
     }
 
     public void pass() {
+        // Logic for passing the turn
+    }
+
+    public void startTurn() {
+        this.block = 0;
     }
 
     @Override
